# eclipse-farmer

./: .gitignore  Cargo.toml  README.md
data/: config.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241218_150500_create_account_goals_table.rs  m20241222_135418_create_bridge_goals_table.rs
src/: config.rs  main.rs
src/coinlore/: api.rs  constants.rs  schemas.rs
src/db/: constants.rs  erase.rs  generate.rs  mod.rs
src/db/entities/: account.rs  account_goal.rs  bridge_module_state.rs  mod.rs  prelude.rs
src/db/service/: mod.rs  prelude.rs
src/db/service/account/: mutation.rs  query.rs
src/db/service/account_goal/: mutation.rs  query.rs
src/db/service/bridge_module_state/: mutation.rs  query.rs
src/modules/: bridge.rs  mod.rs
src/modules/warmup/: action.rs  mod.rs
src/onchain/: mod.rs
src/onchain/eclipse/: mod.rs
src/onchain/eclipse/common/: constants.rs  derive.rs  ixs.rs  mod.rs  state.rs  token.rs  tx.rs  typedefs.rs  utils.rs
src/onchain/eclipse/lifinity/: constants.rs  math.rs  mod.rs  swap.rs  typedefs.rs  utils.rs
src/onchain/eclipse/underdog/: api.rs  constants.rs  create.rs  mod.rs  schema.rs
src/onchain/evm/: client.rs  constants.rs  eclipse_bridge.rs  mod.rs  types.rs
src/utils/: fetch.rs  logger.rs  misc.rs  mod.rs
